--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ * require_treerequire_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "jumbotron-narrow";
