--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -9,8 +9,18 @@
 </div>
 <div class="form-group">
   <%= f.label :category %>
-  <%= f.select :category, Expense.categories.keys.to_a %>
+  <%= f.select :category, Expense.categories.keys.to_a, {}, {class: "form-control"} %>
 </div>
+<div class="form-group">
+  <%= f.label :payment_method %>
+  <%= f.select :payment_method, Expense.payment_methods.keys.to_a, {}, {class: "form-control"}%>
+</div>
+<div class="form-group">
+  <%= f.label :transaction_type %>
+  <%= f.select :transaction_type, Expense.transaction_types.keys.to_a, {}, {class: "form-control"} %>
+</div>
+
+
 <div class="form-group">
   <%= f.label :description %>
   <%= f.text_area :description, row: 3, class: "form-control"  %>
