devise views edited for styling. models foreign key methods assigned front page edited

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,29 @@
   <div class="jumbotron">
-    <h1>Welcome to Elite!</h1>
-    <p class="lead">Currently this site is only available to Richard's students. Please be patient as this site evolves over the years</p>
+    <h1>Welcome to ExpenseTracker!</h1>
+    <p class="lead">Become aware of your money flow! Get on top of your fiances by analyzing your habitual spending!</p>
     <p><%= link_to "Sign up here!", new_user_registration_path, :class => "btn btn-lg btn-success", :role => "button" %></p>
   </div>
 
   <div class="row marketing">
     <div class="col-lg-6">
-      <h4>My students</h4>
-      <p>excel and seeks preview of materials; or have difficulties with current materials; <i>no student is left behind</i>.</p>
+      <h4>Track</h4>
+      <p>your spending! Many times it can be a surprise to find the amount of money you spend on small things.</p>
 
-      <h4>Together</h4>
-      <p>we are one. <i>We grow teamwork</i> for both learning and teaching. Student becomes the teacher &amp; teacher become the student. A mutual experience, which students natually become experts of the subject of study.</p>
+      <h4>Graph</h4>
+      <p>the transactions to visually analyze your savings and expenses. Whether its weekly, monthly, or by catagory, you can do them all.</p>
 
-      <h4>Customized</h4>
-      <p>experiences are taylored to <i>fit students' needs</i>. Exams this week? Want to code while you learn math? Want to meet up at a library? No problem!</p>
+      <h4>Free</h4>
+      <p>For the time being, all services we provide are free of charge. <a href="/donations">Donations</a> through paypal and bitcoin are appreciated!</p>
     </div>
 
     <div class="col-lg-6">
-      <h4>A teacher</h4>
-      <p>must be highly <i>motivated and passionate</i> about the subject. To provoke interest, and ignite curiosity within students, Richard is passionate for reaching out to students. From Niagara Falls, Waterloo, Ottawa to Toronto, distance will not deter Richard.</p>
+      <h4>Simple</h4>
+      <p>designs, and intuitive analysis leaves us more useful information to track out habits</p>
 
       <h4>Innovative</h4>
-      <p>ideas and new implementations are hot! Finding areas of improvement, and finding more effective strategy has <i>proven results</i>.
-      </p>
+      <p>algorithms are used to analyze the gold within your data.</p>
 
       <h4>Value</h4>
-      <p>of learning experience, <i>changes lives</i>. Elite tutoring takes the <i>extra step</i> to bring quality into the classroom</p>
+      <p>of learning though results is priceless. It's how we humans have built civilizations, business, and knowledge. Expense Tracker is a tool for anyone; to learn more about his/her personal fiance</p>
     </div>
   </div>
