--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -14,7 +14,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
   </div>
 
-  <div class="actions">
+  <div class="actions form-group">
     <%= f.submit "Change my password", class: "btn btn-default" %>
   </div>
 <% end %>
