add net_chart and daily_expense_chart

--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -3,5 +3,6 @@
 </script>
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 
-<%= line_chart daily_balance_chart_path %>
+<%= column_chart daily_expense_chart_path %>
 
+<%= line_chart daily_net_chart_path, library: {curveType: "none", pointSize: 0} %>
