--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,12 @@
+<style>
+#chart svg {
+  height: 400px;
+}
+</style>
+
+<div id="chart">
+  <svg></svg>
+</div>
 
 <%= link_to "Add new expense transaction", new_expense_path, class: "btn btn-success btn-lg btn-block", style: "margin-bottom: 20px;" %>
 
