--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,19 +1,83 @@
+<style>
+tr:hover td { background-color:#ADD8E6 }
+
+#chart svg {
+  height: 400px;
+}
+
+#infinite-scrolling  {
+    width: 50%;
+    margin: 0 auto;
+}
+
+#dummy {
+    padding-top: 80px; /* forces 1:1 aspect ratio */
+}
+
+#ajax-loading{
+  display: none;
+  position: relative;
+  width: 100%;
+}
+
+#img-container{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align:center; /* Align center inline elements */
+}
+
+</style>
+
+<div id="chart">
+  <svg></svg>
+</div>
+
+<%= link_to "Add transaction", new_expense_path, class: "btn btn-success btn-lg btn-block", style: "margin-bottom: 20px;" %>
+
 <table class="table table-striped">
-  <tr>
-    <td>date</td>
-    <td>amount</td>
-    <td>description</td>
-    <td>net</td>
-    <td>day net</td>
-  </tr>
-<% @expenses.each do |e| %>
-  <tr>
-    <td><%= e.date %></td>
-    <td>$<%= e.amount %></td>
-    <td><%= truncate(e.description) %></td>
-    <td><%= e.net %></td>
-    <td><%= e.day_net %></td>
-  </tr>
-<% end %>
+  <thead>
+    <tr class="title" >
+      <th style="text-align:center;">Date</th>
+      <th style="text-align:right;">Amount</th>
+      <th class="hidden-xs">Category</th>
+      <th>Description</th>
+      <th class="hidden-xs">Transaction type</th>
+      <th class="hidden-xs">Payment method</th>
+      <th style="text-align:center;">Delete</th>
+    </tr>
+  </thead>
+  <tbody id="transactions">
+    <%= render partial: "expenses", object: @expenses %>
+  </tbody>
 </table>
-<%= link_to "Add new expense transaction", new_expense_path %>
+
+<div id="ajax-loading">
+  <div id="dummy"></div>
+  <div id="img-container">
+    <img src="/assets/ajax-loader.gif"/>
+  </div>
+</div>
+
+<div class="hidden-xs" id="infinite-scrolling">
+  <%= will_paginate %>
+</div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  //trigger popover
+  $('[data-toggle="popover"]').popover();   
+  //trigger close on all popover if click outside
+  $('body').on('click', function (e) {
+    $('[data-toggle="popover"]').each(function () {
+      //the 'is' for buttons that trigger popups
+      //the 'has' for icons within a button that triggers a popup
+      if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $('.popover').has(e.target).length === 0) {
+        $(this).popover('hide');
+      }
+    });
+  }); 
+});
+</script>
