moved legacy popover code to home.js in coffee script styled container differently for the homepage to be more slim added favicon fixed donation links changed name of project to dat dough added target self to fix link bugs

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,11 +1,15 @@
+<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <h2>Contact</h2>
 <p>Feel free to contact the developer.</p>
 <label>Developer:</label>
 <div style="width:364px; position:relative; left:-17px; margin:0 auto;">
-<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/richiesan" data-format="inline" data-related="false"></script>
 </div>
-<label>More <a href="https://github.com/sinr0202">Github</a> projects:</label>
+<label>Contributor:</label>
+<div style="width:364px; position:relative; left:-17px; margin:0 auto;">
+<script type="IN/MemberProfile" data-id="https://ca.linkedin.com/pub/zhiliang-lee-xing/55/421/840" data-format="inline" data-related="false"></script>
+</div>
+<label>More <a href="https://github.com/sinr0202">Github</a> projects by devloper:</label>
 <ul>
   <li><a href="https://github.com/sinr0202/Elite">EliteTutoring</a></li>
   <li><a href="https://github.com/sinr0202/tiception">Tiception</a></li>
