--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
   <div class="jumbotron">
-    <h1>Welcome to ExpenseTracker!</h1>
+    <h1>Welcome to DatDough!</h1>
     <p class="lead">Become aware of your money flow! Get on top of your fiances by analyzing your habitual spending!</p>
     <p><%= link_to "Sign up here!", new_user_registration_path, :class => "btn btn-lg btn-success", :role => "button" %></p>
   </div>
@@ -13,7 +13,7 @@
       <p>the transactions to visually analyze your savings and expenses. Whether its weekly, monthly, or by catagory, you can do them all.</p>
 
       <h4>Free</h4>
-      <p>For the time being, all services we provide are free of charge. <a href="/donations">Donations</a> through paypal and bitcoin are appreciated!</p>
+      <p>For the time being, all services we provide are free of charge. <%= link_to 'Dontate', donation_path, target: "_self"  %> through paypal and bitcoin are appreciated!</p>
     </div>
 
     <div class="col-lg-6">
