--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,36 +1,3 @@
-<style>
-tr:hover td { background-color:#ADD8E6 }
-
-#chart svg {
-  height: 400px;
-}
-
-#infinite-scrolling  {
-    width: 50%;
-    margin: 0 auto;
-}
-
-#dummy {
-    padding-top: 80px; /* forces 1:1 aspect ratio */
-}
-
-#ajax-loading{
-  display: none;
-  position: relative;
-  width: 100%;
-}
-
-#img-container{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  text-align:center; /* Align center inline elements */
-}
-
-</style>
-
 <div id="chart">
   <svg></svg>
 </div>
@@ -41,7 +8,7 @@ tr:hover td { background-color:#ADD8E6 }
   <thead>
     <tr class="title" >
       <th style="text-align:center;">Date</th>
-      <th style="text-align:right;">Amount</th>
+      <th style="text-align:right;">&nbsp;&nbsp;&nbsp;&nbsp;Amount</th>
       <th class="hidden-xs">Category</th>
       <th>Description</th>
       <th class="hidden-xs">Transaction type</th>
@@ -64,20 +31,3 @@ tr:hover td { background-color:#ADD8E6 }
 <div class="hidden-xs" id="infinite-scrolling">
   <%= will_paginate %>
 </div>
-
-<script type="text/javascript">
-$(document).ready(function(){
-  //trigger popover
-  $('[data-toggle="popover"]').popover();   
-  //trigger close on all popover if click outside
-  $('body').on('click', function (e) {
-    $('[data-toggle="popover"]').each(function () {
-      //the 'is' for buttons that trigger popups
-      //the 'has' for icons within a button that triggers a popup
-      if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $('.popover').has(e.target).length === 0) {
-        $(this).popover('hide');
-      }
-    });
-  }); 
-});
-</script>
