asset serve configuration added corrected spelling mistakes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
   <div class="jumbotron">
     <h1>Welcome to DatDough!</h1>
-    <p class="lead">Become aware of your money flow! Get on top of your fiances by analyzing your habitual spending!</p>
+    <p class="lead">Become aware of your money flow! Get on top of your finances by analyzing your habitual spending!</p>
     <p><%= link_to "Sign up here!", new_user_registration_path, :class => "btn btn-lg btn-success", :role => "button" %></p>
   </div>
 
@@ -10,10 +10,10 @@
       <p>your spending! Many times it can be a surprise to find the amount of money you spend on small things.</p>
 
       <h4>Graph</h4>
-      <p>the transactions to visually analyze your savings and expenses. Whether its weekly, monthly, or by catagory, you can do them all.</p>
+      <p>the transactions to visually analyze your savings and expenses. Whether its weekly, monthly, or by category, you can do them all.</p>
 
       <h4>Free</h4>
-      <p>For the time being, all services we provide are free of charge. <%= link_to 'Dontate', donation_path, target: "_self"  %> through paypal and bitcoin are appreciated!</p>
+      <p>For the time being, all services we provide are free of charge. <%= link_to 'Donate', donation_path, target: "_self"  %> through paypal and bitcoin are appreciated!</p>
     </div>
 
     <div class="col-lg-6">
@@ -24,6 +24,6 @@
       <p>algorithms are used to analyze the gold within your data.</p>
 
       <h4>Value</h4>
-      <p>of learning though results is priceless. It's how we humans have built civilizations, business, and knowledge. Expense Tracker is a tool for anyone; to learn more about his/her personal fiance</p>
+      <p>of learning though results is priceless. It's how we humans have built civilizations, business, and knowledge. Expense Tracker is a tool for anyone; to learn more about his/her personal finance</p>
     </div>
   </div>
