add gem to do instead changed assets to use rails erg tags

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -24,7 +24,7 @@
 <div id="ajax-loading">
   <div id="dummy"></div>
   <div id="img-container">
-    <img src="/assets/ajax-loader.gif"/>
+    <%= image_tag 'ajax-loader.gif' %>
   </div>
 </div>
 
