update title of the website update bundle change the scss file css importing with adding extension

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,5 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "expense-page";
-@import "jumbotron-narrow";
+@import "expense-page.css";
+@import "jumbotron-narrow.css";
