--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,7 @@
 /*
 *= require nvd3-rails
+*= require_tree .
 */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "expense-page.css";
-@import "jumbotron-narrow.css";
