--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
 
   <div class="actions">
     <%= f.submit "Sign up", class: "btn btn-default" %>
-  </div>
+  </div><br>
 <% end %>
 
 <%= render "devise/shared/links" %>
