--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="container-fluid">
@@ -24,7 +25,7 @@
           <% end %>
         </ul>
       </nav>
-      <h3 class="text-muted"><a href='/' style='text-decoration: none;'>DatDough</a></h3>
+      <h3 class="text-muted"><a href='/' style='text-decoration: none; font-family: "Alfa Slab One", cursive;'>DatDough</a></h3>
     </div>
   </div>
 
