--- a/app/views/home/donation.html.erb
+++ b/app/views/home/donation.html.erb
@@ -12,19 +12,7 @@
 </form>
 <br>
 <label>Bitcoin:</label><br>
-<script src="http://coinwidget.com/widget/coin.js"></script>
-<script>
-CoinWidgetCom.go({
-  wallet_address: "1EStmKVEwqmsjt61GSKG5twasv6WrbBFx9"
-  , currency: "bitcoin"
-  , counter: "hide"
-  , alignment: "bl"
-  , qrcode: true
-  , auto_show: false
-  , lbl_button: "Donate"
-  , lbl_address: "My Bitcoin Address:"
-  , lbl_count: "donations"
-  , lbl_amount: "BTC"
-});
-</script>
+<script src="//gitcdn.org/libs/bitcoinate/0.2.1/index.min.js"></script>
+<button class="bitcoinate" data-size="50" data-address="1EStmKVEwqmsjt61GSKG5twasv6WrbBFx9" data-type="URI" data-amount="0.05" data-label="Donation">Donation</button>
+
 <br><br><br>
