--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -13,6 +13,7 @@
       <th>Description</th>
       <th class="hidden-xs">Transaction type</th>
       <th class="hidden-xs">Payment method</th>
+      <th style="text-align:center;">Edit</th>
       <th style="text-align:center;">Delete</th>
     </tr>
   </thead>
