--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -2,8 +2,8 @@
   <svg></svg>
 </div>
 <%= form_tag '/expenses', method: :get do%>
-  <%= date_field_tag 'start_date' %>
-  <%= date_field_tag 'end_date' %>
+  <%= label_tag "start date" %> <%= date_field_tag 'start_date' %>
+  <%= label_tag "end date" %> <%= date_field_tag 'end_date' %>
   <%= submit_tag "update" %>
 <% end %>
 
