--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,25 @@
     <div class="header">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation" <% if current_page?(root_path) %>class="active"<% end %>><a href="/">Home</a></li>
-          <% if user_signed_in? %>
-            <li class="hidden-xs <% if current_page?(import_path) %>active<% end %>" ><%= link_to 'Import', import_path, class: 'navbar-link' %></li>
-            <li <% if current_page?(edit_user_registration_path) %>class="active"<% end %>><%= link_to 'Edit Account', edit_user_registration_path, class: 'navbar-link' %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link' %></li>
-          <% else %>
-            <li><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %></li>
-            <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link' %></li>
-          <% end %>
+          <li>
+            <div class="dropdown">
+              <a class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <span class="glyphicon glyphicon-list"></span>
+              </a>
+              <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
+                <% if user_signed_in? %>
+                  <li <% if current_page?(edit_user_registration_path) %>class="active"<% end %>><%= link_to 'Edit Account', edit_user_registration_path, class: 'navbar-link' %></li>
+                  <li class="hidden-xs <% if current_page?(import_path) %>active<% end %>" ><%= link_to 'Import CSV', import_path, class: 'navbar-link' %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link' %></li>
+                <% else %>
+                  <li><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %></li>
+                  <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link' %></li>
+                <% end %>
+              </ul>
+            </div>
+          </li>
+
         </ul>
       </nav>
       <h3 class="text-muted"><a href='/' style='text-decoration: none; font-family: "Alfa Slab One", cursive;'>DatDough</a></h3>
