--- a/app/views/expenses/dashboard.html.erb
+++ b/app/views/expenses/dashboard.html.erb
@@ -7,8 +7,8 @@
 
 <!-- Buttons -->
 <div class="btn-group btn-group-justified">
-  <a class="btn btn-default btn-lg" data-toggle="modal" data-target="#date" ><span class="glyphicon glyphicon-time"></span></a>
-  <a class="btn btn-success btn-lg" style="width:20%" data-toggle="modal" data-target="#transaction" ng-click="new()">Add Transaction</a>
+  <a class="btn btn-default btn-lg" style="width:20%" data-toggle="modal" data-target="#date" ><span class="glyphicon glyphicon-time"></span></a>
+  <a class="btn btn-success btn-lg" style="width:80%" data-toggle="modal" data-target="#transaction" ng-click="new()">Add Transaction</a>
 </div>
 
 <!-- Date Range Modal -->
