--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,24 +15,25 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li>
-            <div class="dropdown">
-              <a class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <div class="btn-group" dropdown is-open="status.isopen">
+              <a type="button" class="btn btn-default dropdown-toggley" dropdown-toggle ng-disabled="disabled">
                 <span class="glyphicon glyphicon-list"></span>
               </a>
-              <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
+              <ul class="dropdown-menu pull-right">
                 <% if user_signed_in? %>
                   <li <% if current_page?(edit_user_registration_path) %>class="active"<% end %>><%= link_to 'Edit Account', edit_user_registration_path, class: 'navbar-link' %></li>
                   <li class="hidden-xs <% if current_page?(import_path) %>active<% end %>" ><%= link_to 'Import CSV', import_path, class: 'navbar-link' %></li>
+                  <li><%= link_to "Graphs", graph_path, class: 'navbar-link' %></li>
                   <li role="separator" class="divider"></li>
                   <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link' %></li>
                 <% else %>
-                  <li><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %></li>
-                  <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link' %></li>
+                  <li><%= link_to "Sign Up", new_user_registration_path, class: 'navbar-link' %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to "Login", new_user_session_path, class: 'navbar-link' %></li>
                 <% end %>
               </ul>
             </div>
           </li>
-
         </ul>
       </nav>
       <h3 class="text-muted"><a href='/' style='text-decoration: none; font-family: "Alfa Slab One", cursive;'>DatDough</a></h3>
