upgrated nvd3, added pie graph and controller to handle. expense controller has deligated the stats to stats controller

--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,9 +1,25 @@
+<style>
+    text {
+        font: 12px sans-serif;
+    }
+    svg {
+        display: block;
+        float: left;
+        height: 350px !important;
+        width: 350px !important;
+    }
+    html, body {
+        margin: 0px;
+        padding: 0px;
+        height: 100%;
+        width: 100%;
+    }
+</style>
 <div ng-controller="GraphCtrl">
 
 <!-- Chart -->
-<div id="chart">
+<div id="pie-chart">
   <svg></svg>
 </div>
-
 
 </div>
