--- a/app/assets/stylesheets/expense.css
+++ b/app/assets/stylesheets/expense.css
@@ -7,15 +7,8 @@ tr:hover td {
 }
 
 .chart svg {
-    display: block;
-    float: left;
-    height: 350px !important;
-    width: 350px !important;
-}
-
-.chart{
-    width: 50%;
-    margin: 0 auto;
+  margin: 0 auto;
+  height: 500px;
 }
 
 #infinite-scrolling  {
