--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-hide="loggedIn" ng-click="selectTab(3)"><span class="glyphicon glyphicon-pencil">&nbsp;Signup</span></a></li>
                 <li><a ng-hide="loggedIn" ng-click="selectTab(2)"><span class="glyphicon glyphicon-log-in">&nbsp;Signin</span></a></li>
-                <li><a ng-show="loggedIn" ng-click="showGraph()"><span class="glyphicon glyphicon-object-align-bottom">&nbsp;Graph</span></a></li>
+                <li><a ng-show="loggedIn" ng-click="showGraph()"><span class="glyphicon glyphicon-object-align-bottom">&nbsp;Stats</span></a></li>
                 <li><a ng-show="loggedIn" ng-click="logout()"><span class="glyphicon glyphicon-log-out">&nbsp;Signout</span></a></li>
             </ul>
         </div>
@@ -210,11 +210,91 @@
 
   </div>
 
-  <div ng-show="tabSelected(5)" ng-controller="StatsCtrl">
+  <div ng-show="tabSelected(5)" ng-controller="StatsCtrl" class="container">
+    <h1>Statistics 
+    <a class="btn btn-default pull-right" ng-click="openDateModal()"><span class="glyphicon glyphicon-time"></span></a>
+    <small class="pull-right" style="padding-right: 10px;">[{{startDate | date: 'MMM-d'}} - {{endDate | date: 'MMM-d'}}]</small>
+    </h1>
+
+    <!-- Date Range Modal -->
+    <script type="text/ng-template" id="dateModal.html">
+      <form name="dateForm" novalidate>
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" aria-label="Close" ng-click="close()"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="dateLabel">Date Range</h4>
+          </div>
+          <div class="modal-body">
+            <div class="form-group" ng-class="{'has-error' : dateForm.start_date.$invalid && !dateForm.start_date.$pristine, 'has-success' : dateForm.start_date.$valid}"
+              <label for="start_date">Start date</label>
+              <input type="date" name="start_date" class="form-control" ng-model="startDate" required>
+            </div>
+            <div class="form-group" ng-class="{'has-error' : dateForm.end_date.$invalid && !dateForm.end_date.$pristine, 'has-success' : dateForm.end_date.$valid}"
+              <label for="end_date">End date</label>
+              <input type="date" name="end_date" class="form-control" ng-model="endDate" required>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-default" ng-click="close()">Return</button>
+          </div>
+        </div>
+      </form>
+    </script>
+
+    <!-- Table -->
+    <table class="table table-hover table-condensed">
+      <tr>
+        <th>Average monthly income</th>
+        <th>Amount</th>
+      </tr>
+      <tr ng-repeat="(year, value) in stats.avg_income">
+        <td>{{year}}</td>
+        <td>{{value | currency}}</td>
+      </tr>
+      <tr>
+        <th>Average monthly expense</th>
+        <th>Amount</th>
+      </tr>
+      <tr ng-repeat="(year, value) in stats.avg_expense">
+        <td>{{year}}</td>
+        <td>{{value | currency}}</td>
+      </tr>
+    </table>
+
+
     <!-- Chart -->
-    <div class="chart" id="pie-chart">
+    <h3>Income
+      <a class="btn btn-default pull-right" ng-click="incomePieSettingOpen = true" ng-hide="incomePieSettingOpen"><span class="glyphicon glyphicon-cog"></span></a>
+    </h3>
+
+    <div class="btn-group btn-group-justified" ng-show="incomePieSettingOpen">
+      <label>Max Category</label>
+      <a class="btn btn-default" style="width:10%" ng-click="incomePieSettingOpen = false"><span class="glyphicon glyphicon-cog"></span></a>
+      <a class="btn btn-success" style="width:45%" ng-click="maxIncomeUp()">More</a>
+      <a class="btn btn-success" style="width:45%" ng-click="maxIncomeDown()">Less</a>
+    </div>
+
+
+    <div class="chart" id="income-pie-chart">
       <svg></svg>
     </div>
+
+    <h3>Expense
+      <a class="btn btn-default pull-right" ng-click="expensePieSettingOpen = true" ng-hide="expensePieSettingOpen"><span class="glyphicon glyphicon-cog"></span></a>
+    </h3>
+
+    <div class="btn-group btn-group-justified" ng-show="expensePieSettingOpen">
+      <label>Max Category</label>
+      <a class="btn btn-default" style="width:10%" ng-click="expensePieSettingOpen = false"><span class="glyphicon glyphicon-cog"></span></a>
+      <a class="btn btn-success" style="width:45%" ng-click="maxExpenseUp()">More</a>
+      <a class="btn btn-success" style="width:45%" ng-click="maxExpenseDown()">Less</a>
+    </div>
+
+
+    <div class="chart" id="expense-pie-chart">
+      <svg></svg>
+    </div>
+
   </div>
 
 
